crates/plotnik-tests/tests/04-emit/bytecode/anchors/optional_erases_exact_anchor.txt
Q = (array
  .!
  ";"?
  (identifier) @id
)
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), this child cannot appear first in `array` because an `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array
  |      ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap, including anonymous tokens and comments. The soft anchor `.` skips those: `(array
        .
        ";"?
        (identifier) @id
      )`
